Fix ul lists gap
Added more gap between ul's elements.

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -64,7 +64,7 @@ ul {
   list-style-type: none;
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 16px;
   padding: 0;
   margin: 0;
 }
